--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "santo-domingo-shifts",
-  "homepage": "http://tomaslarrain.github.io/santo-domingo-shifts",
+  "homepage": "http://tlarrain.github.io/santo-domingo-shifts",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
