add auto select on load and update react-scripts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "santo-domingo-shifts",
   "homepage": "http://tlarrain.github.io/santo-domingo-shifts",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "moment": "^2.29.1",
@@ -9,7 +9,7 @@
     "react-datepicker": "^1.8.0",
     "react-day-picker": "^7.4.10",
     "react-dom": "^16.14.0",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^4.0.0",
     "react-table": "^6.8.6"
   },
   "scripts": {
@@ -22,5 +22,17 @@
   },
   "devDependencies": {
     "gh-pages": "2.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
