--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-datepicker": "^1.8.0",
     "react-day-picker": "^7.4.10",
     "react-dom": "^16.14.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "^4.0.0",
     "react-table": "^6.8.6"
   },
